<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlowingDrawer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile_photo">https://avatars1.githubusercontent.com/u/6947495?v=3&amp;s=460</string>
    <string name="main_ios">ios</string>
    <string name="vedio">休息视频</string>
    <string name="ui">前端</string>
    <string name="love">福利</string>
    <string name="more">拓展资源</string>
    <string name="all">所有</string>
    <string name="android">android</string>
    <string name="per_info">个人信息</string>
    <string name="tv_main_toolbar">首页</string>
    <string name="tv_show_info">详情信息</string>

    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
</resources>